--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 }
 
 body{
-  background: linear-gradient(270deg, var(--primary-color), var(--secundary-color));
+  background: linear-gradient(270deg, var(--primary-color), var(--secundary-color)) no-repeat;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100%;
   background-size: cover;
@@ -30,18 +30,20 @@ body{
 
 .header h1 {
   margin-top: 50px;
+  padding-bottom: 20px;
 }
 
 .search {
   outline: none;
   height: 50px;
-  width: 150px;
+  width: 200px;
   padding: 7px;
 }
 
 .card-list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
   margin: auto;
   width: 1300px;
   margin-bottom: 50px;
@@ -51,7 +53,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px 0;
+  padding: 40px 10px;
   margin: 10px;
   background-color: var(--card-color);
   border-radius: 5px;
@@ -63,20 +65,79 @@ body{
   transform: scale(1.05);
 }
 
-.card-list h1 {
-  font-size: 40px;
-  padding: 0 15px;
-  border: 2px solid black;
-}
-
-.card-list img {
+.monsterrolodex img {
   width: 250px;
 }
 
-.card-list h2 {
+.monsterrolodex h2 {
   margin: 20px 0;
 }
 
-.card-list p {
+.monsterrolodex p {
   margin-top: 10px;
+}
+
+@media (max-width: 1330px){
+  .card-list{
+    grid-template-columns: repeat(3, 1fr);
+    width: 1000px;
+  }
+}
+
+@media (max-width: 1023px){
+  .header {
+    font-size: 25px;
+  }
+
+  .card-list{
+    grid-template-columns: repeat(3, 1fr);
+    width: 500px;
+  }
+
+  .card-list div {
+    padding: 20px 10px;
+  }
+  
+  .monsterrolodex img {
+    width: 150px;
+  }
+  
+  .monsterrolodex h2 {
+    margin: 10px 0;
+    font-size: 12px;
+  }
+  
+  .monsterrolodex p {
+    margin-top: 5px;
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 650px){
+  .header {
+    font-size: 15px;
+  }
+
+  .card-list{
+    grid-template-columns: repeat(2, 1fr);
+    width: 300px;
+  }
+
+  .card-list div {
+    padding: 20px 0px;
+  }
+  
+  .monsterrolodex img {
+    width: 100px;
+  }
+  
+  .monsterrolodex h2 {
+    margin: 10px 0;
+    font-size: 10px;
+  }
+  
+  .monsterrolodex p {
+    margin-top: 5px;
+    font-size: 8px;
+  }
 }
