--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,10 @@ body{
 }
 
 @media (max-width: 1023px){
+  body{
+    height: 100vh;
+  }
+  
   .header {
     font-size: 25px;
   }
@@ -114,6 +118,10 @@ body{
 }
 
 @media (max-width: 650px){
+  body{
+    height: 100vh;
+  }
+  
   .header {
     font-size: 15px;
   }
