--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 }
 
 body{
-  background: linear-gradient(270deg, var(--primary-color), var(--secundary-color)) no-repeat;
+  background: linear-gradient(270deg, var(--primary-color), var(--secundary-color));
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100%;
   background-size: cover;
@@ -85,10 +85,6 @@ body{
 }
 
 @media (max-width: 1023px){
-  body{
-    height: 100vh;
-  }
-  
   .header {
     font-size: 25px;
   }
@@ -118,10 +114,6 @@ body{
 }
 
 @media (max-width: 650px){
-  body{
-    height: 100vh;
-  }
-  
   .header {
     font-size: 15px;
   }
